update login page

--- a/html/login.html
+++ b/html/login.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Air Asia</title>
-    <link rel="stylesheet" href="styles.css" >
+    <title>Suburban Outfitters</title>
+    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/css/lindsaystyles.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -17,12 +17,12 @@
 
                 <div class="modal-dialog" style="margin: 10px auto;">
                     <div class="loginmodal-container" style="background: url(binding_dark.png)repeat fixed;color: black;">
-                        <img src="aalogo.png"><br>
-                        <h3>Mileage Program</h3><br>
+                        <img src="SUlogo.png"><br>
+                        <h3 style="text-align: center">Suburban Outfitters</h3><br>
                         <form action="card-list.html" method="post">
                             <input type="text" name="uname" placeholder="Username" autocomplete="off" required>
                             <input type="password" name="upass" placeholder="Password" autocomplete="off" required>
-                            <input type="submit" name="login" class="login loginmodal-submit" value="Login" style="background-color:#F44336;">
+                            <input type="submit" name="login" class="login loginmodal-submit" value="Login" style="background-color:#80b2f0;">
                         </form>
                     </div>
                 </div>
