--- a/html/index.html
+++ b/html/index.html
@@ -7,24 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
     <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/thirdparty/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/suburbanoutfitters/thirdparty/bootstrap/css/bootstrap.min.css">
     <!-- Lightbox-->
-    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/thirdparty/lightbox2/css/lightbox.min.css">
+    <link rel="stylesheet" href="/suburbanoutfitters/thirdparty/lightbox2/css/lightbox.min.css">
     <!-- Range slider-->
-    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/thirdparty/nouislider/nouislider.min.css">
+    <link rel="stylesheet" href="/suburbanoutfitters/thirdparty/nouislider/nouislider.min.css">
     <!-- Bootstrap select-->
-    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/thirdparty/bootstrap-select/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="/suburbanoutfitters/thirdparty/bootstrap-select/css/bootstrap-select.min.css">
     <!-- Owl Carousel-->
-    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/thirdparty/owl.carousel2/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/thirdparty/owl.carousel2/assets/owl.theme.default.css">
+    <link rel="stylesheet" href="/suburbanoutfitters/thirdparty/owl.carousel2/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="/suburbanoutfitters/thirdparty/owl.carousel2/assets/owl.theme.default.css">
     <!-- Google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;800&amp;display=swap">
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/css/themestyles.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="/suburbanoutfitters/css/themestyles.css" id="theme-stylesheet">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="/htdocs/suburbanoutfitters/img/favicon.png">
-    <link rel="stylesheet" href="/htdocs/suburbanoutfitters/css/loginstyles.css" >
+    <link rel="shortcut icon" href="/suburbanoutfitters/img/favicon.png">
+    <link rel="stylesheet" href="/suburbanoutfitters/css/loginstyles.css" >
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
 <div class="page-holder">
@@ -40,12 +41,12 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <!-- Link--><a class="nav-link" href="detail.html">Product detail</a>
+                            <!-- Link--><a class="nav-link" href="proddetails.html">Product detail</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="cart.html"> <i class="fas fa-dolly-flatbed mr-1 text-gray"></i>Cart<small class="text-gray">(2)</small></a></li>
-                        <li class="nav-item"><a class="nav-link" href="/htdocs/suburbanoutfitters/html/login.html"> <i class="fas fa-user-alt mr-1 text-gray"></i>Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/suburbanoutfitters/html/login.html"> <i class="fas fa-user-alt mr-1 text-gray"></i>Login</a></li>
                     </ul>
                 </div>
             </nav>
@@ -54,11 +55,11 @@
 </div>
     <!-- HERO SECTION-->
     <div class="container">
-        <section class="hero pb-3 bg-cover bg-center d-flex align-items-center" style="background: url(/htdocs/suburbanoutfitters/img/hero-banner.png)">
+        <section class="hero pb-3 bg-cover bg-center d-flex align-items-center" style="background: url(/suburbanoutfitters/img/hero-banner.png)">
             <div class="container py-5">
                 <div class="row px-4 px-lg-5">
                     <div class="col-lg-6">
-                        <h1 class="h2 text-uppercase mb-3">20% off Winter Sale</h1><a class="btn btn-dark" href="shop.html">Shop All</a>
+                        <h1 class="h2 text-uppercase mb-3">20% off Winter Sale</h1><a class="btn btn-dark" href="products.html">Shop All</a>
                     </div>
                 </div>
             </div>
@@ -69,12 +70,11 @@
                 <h3 class="h5 text-uppercase mb-4">Categories</h3>
             </header>
             <div class="row">
-                <div class="col-md-4 mb-4 mb-md-0"><a class="category-item" href="shop.html"><img class="img-fluid" src="/htdocs/suburbanoutfitters/img/shirticon.png" alt=""><strong class="category-item-title">Shirts</strong></a></div>
-                <div class="col-md-4 mb-4 mb-md-0"><a class="category-item" href="shop.html"><img class="img-fluid" src="/htdocs/suburbanoutfitters/img/pantsicon.png" alt=""><strong class="category-item-title">Pants</strong></a></div>
-                <div class="col-md-4"><a class="category-item" href="shop.html"><img class="img-fluid" src="/htdocs/suburbanoutfitters/img/shoeicon.png" alt=""><strong class="category-item-title">Shoes</strong></a></div>
+                <div class="col-md-4 mb-4 mb-md-0"><a class="category-item" href="shop.html"><img class="img-fluid" src="/suburbanoutfitters/img/shirticon.png" alt=""><strong class="category-item-title">Shirts</strong></a></div>
+                <div class="col-md-4 mb-4 mb-md-0"><a class="category-item" href="shop.html"><img class="img-fluid" src="/suburbanoutfitters/img/pantsicon.png" alt=""><strong class="category-item-title">Pants</strong></a></div>
+                <div class="col-md-4"><a class="category-item" href="shop.html"><img class="img-fluid" src="/suburbanoutfitters/img/shoeicon.png" alt=""><strong class="category-item-title">Shoes</strong></a></div>
             </div>
         </section>
-
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    </div>
 </body>
 </html>
