update cart page

--- a/html/products.html
+++ b/html/products.html
@@ -41,12 +41,12 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <!-- Link--><a class="nav-link" href="/suburbanoutfitters/html/proddetails.html">Product detail</a>
+                            <!-- Link--><a class="nav-link" href="proddetails.html">Product detail</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="cart.html"> <i class="fas fa-dolly-flatbed mr-1 text-gray"></i>Cart<small class="text-gray">(2)</small></a></li>
-                        <li class="nav-item"><a class="nav-link" href="/suburbanoutfitters/html/login.html"> <i class="fas fa-user-alt mr-1 text-gray"></i>Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html"> <i class="fas fa-user-alt mr-1 text-gray"></i>Login</a></li>
                     </ul>
                 </div>
             </nav>
@@ -111,11 +111,10 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="product text-center">
                                 <div class="mb-3 position-relative">
-                                    <div class="badge text-white badge-"></div><a class="d-block" href="detail.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/redshirt.png" alt="Red Shirt"></a>
+                                    <div class="badge text-white badge-"></div><a class="d-block" href="proddetails.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/redshirt.png" alt="Red Shirt"></a>
                                     <div class="product-overlay">
                                         <ul class="mb-0 list-inline">
                                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
-                                            <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-toggle="modal"><i class="fas fa-expand"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -127,11 +126,10 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="product text-center">
                                 <div class="mb-3 position-relative">
-                                    <div class="badge text-white badge-"></div><a class="d-block" href="detail.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/blueshirt.png" alt="..."></a>
+                                    <div class="badge text-white badge-"></div><a class="d-block" href="proddetails.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/blueshirt.png" alt="..."></a>
                                     <div class="product-overlay">
                                         <ul class="mb-0 list-inline">
                                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
-                                            <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-toggle="modal"><i class="fas fa-expand"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -143,11 +141,10 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="product text-center">
                                 <div class="mb-3 position-relative">
-                                    <div class="badge text-white badge-primary"></div><a class="d-block" href="detail.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/purplepants.png" alt="..."></a>
+                                    <div class="badge text-white badge-primary"></div><a class="d-block" href="proddetails.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/purplepants.png" alt="..."></a>
                                     <div class="product-overlay">
                                         <ul class="mb-0 list-inline">
                                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
-                                            <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-toggle="modal"><i class="fas fa-expand"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -159,11 +156,10 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="product text-center">
                                 <div class="mb-3 position-relative">
-                                    <div class="badge text-white badge-"></div><a class="d-block" href="detail.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/greenpants.png" alt="..."></a>
+                                    <div class="badge text-white badge-"></div><a class="d-block" href="proddetails.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/greenpants.png" alt="..."></a>
                                     <div class="product-overlay">
                                         <ul class="mb-0 list-inline">
                                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
-                                            <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-toggle="modal"><i class="fas fa-expand"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -175,11 +171,10 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="product text-center">
                                 <div class="mb-3 position-relative">
-                                    <div class="badge text-white badge-info"></div><a class="d-block" href="detail.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/brownshoes.png" alt="..."></a>
+                                    <div class="badge text-white badge-info"></div><a class="d-block" href="proddetails.html"><img class="img-fluid w-100" src="/suburbanoutfitters/img/brownshoes.png" alt="..."></a>
                                     <div class="product-overlay">
                                         <ul class="mb-0 list-inline">
                                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
-                                            <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-toggle="modal"><i class="fas fa-expand"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -195,7 +190,6 @@
                                     <div class="product-overlay">
                                         <ul class="mb-0 list-inline">
                                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
-                                            <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-toggle="modal"><i class="fas fa-expand"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
