updates to checkout and hero sections

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="/suburbanoutfitters/css/themestyles.css" id="theme-stylesheet">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="/suburbanoutfitters/img/favicon.png">
+    <link rel="shortcut icon" href="/suburbanoutfitters/img/SUlogo.png">
     <link rel="stylesheet" href="/suburbanoutfitters/css/loginstyles.css" >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
@@ -70,9 +70,9 @@
                 <h3 class="h5 text-uppercase mb-4">Categories</h3>
             </header>
             <div class="row">
-                <div class="col-md-4 mb-4 mb-md-0"><a class="category-item" href="shop.html"><img class="img-fluid" src="/suburbanoutfitters/img/shirticon.png" alt=""><strong class="category-item-title">Shirts</strong></a></div>
-                <div class="col-md-4 mb-4 mb-md-0"><a class="category-item" href="shop.html"><img class="img-fluid" src="/suburbanoutfitters/img/pantsicon.png" alt=""><strong class="category-item-title">Pants</strong></a></div>
-                <div class="col-md-4"><a class="category-item" href="shop.html"><img class="img-fluid" src="/suburbanoutfitters/img/shoeicon.png" alt=""><strong class="category-item-title">Shoes</strong></a></div>
+                <div class="col-md-4 mb-4 mb-md-0"><a class="category-item" href="products.html"><img class="img-fluid" src="/suburbanoutfitters/img/shirticon.png" alt=""><strong class="category-item-title">Shirts</strong></a></div>
+                <div class="col-md-4 mb-4 mb-md-0"><a class="category-item" href="products.html"><img class="img-fluid" src="/suburbanoutfitters/img/pantsicon.png" alt=""><strong class="category-item-title">Pants</strong></a></div>
+                <div class="col-md-4"><a class="category-item" href="products.html"><img class="img-fluid" src="/suburbanoutfitters/img/shoeicon.png" alt=""><strong class="category-item-title">Shoes</strong></a></div>
             </div>
         </section>
     </div>
