--- a/html/cart.html
+++ b/html/cart.html
@@ -23,7 +23,7 @@
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="/suburbanoutfitters/css/themestyles.css" id="theme-stylesheet">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="/suburbanoutfitters/img/favicon.png">
+    <link rel="shortcut icon" href="/suburbanoutfitters/img/SUlogo.png">
     <link rel="stylesheet" href="/suburbanoutfitters/css/loginstyles.css" >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
@@ -55,7 +55,7 @@
 </div>
 <div class="container">
 <!-- HERO SECTION-->
-<section class="py-5 bg-light">
+<section class="py-5 bg-light" id="blue-hero-section">
     <div class="container">
         <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
             <div class="col-lg-6">
@@ -63,7 +63,7 @@
             </div>
             <div class="col-lg-6 text-lg-right">
                 <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb justify-content-lg-end mb-0 px-0">
+                    <ol class="breadcrumb justify-content-lg-end mb-0 px-0" id="blue-breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Cart</li>
                     </ol>
@@ -167,7 +167,7 @@
         <h2 class="h5 text-uppercase mb-4">Checkout Your Cart</h2>
         <div class="row">
             <div class="col-lg-8">
-                <form action="#">
+                <form method="post" action="checkout.html">
                     <div class="row">
                         <div class="col-lg-6 form-group">
                             <label class="text-small text-uppercase" for="firstName">First name</label>
