--- a/html/products.html
+++ b/html/products.html
@@ -23,7 +23,7 @@
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="/suburbanoutfitters/css/themestyles.css" id="theme-stylesheet">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="/suburbanoutfitters/img/favicon.png">
+    <link rel="shortcut icon" href="/suburbanoutfitters/img/SUlogo.png">
     <link rel="stylesheet" href="/suburbanoutfitters/css/loginstyles.css" >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
@@ -56,7 +56,7 @@
 
 <div class="container">
     <!-- TITLE SECTION-->
-    <section class="py-5 bg-light">
+    <section class="py-5 bg-light" id="pink-hero-section">
         <div class="container">
             <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
                 <div class="col-lg-6">
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col-lg-6 text-lg-right">
                     <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-lg-end mb-0 px-0">
+                        <ol class="breadcrumb justify-content-lg-end mb-0 px-0" id="pink-breadcrumb">
                             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Shop</li>
                         </ol>
